recording plus changes

--- a/prototype/views/index.ejs
+++ b/prototype/views/index.ejs
@@ -7,11 +7,9 @@
 <body>
   <h1>Welcome to My Game Search</h1>
   <form action="/search" method="GET">
-    <label for="game_name">Game Name:</label>
-    <input type="text" name="game_name" id="game_name"><br>
-    <label for="game_platform">Platform:</label>
-    <input type="text" name="game_platform" id="game_platform"><br>
-    <input type="submit" value="Search">
+    <label for="steam_id">Steam ID:</label>
+    <input type="text" name="steam_id" id="steam_id"><br>
+    <input type="submit" value="search">
   </form>
 </body>
 </html>
