--- a/prototype/views/index.ejs
+++ b/prototype/views/index.ejs
@@ -1,37 +1,23 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>My Game Search</title>
-</head>
-<body>
-  <h1>Welcome to My Game Search</h1>
-  <form action="/search" method="GET">
-    <label for="steam_id">Steam ID:</label>
-    <input type="text" name="steam_id" id="steam_id"><br>
-    <input type="submit" value="search">
-  </form>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Google OAuth Login Page</title>
+	<title>SteamDigest</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
 	<div class="container">
-		<h1>Google OAuth Login</h1>
-		<form action="https://accounts.google.com/o/oauth2/v2/auth" method="get">
-			<input type="hidden" name="client_id" value="<%= client_id %>">
-			<input type="hidden" name="redirect_uri" value="<%= redirect_uri %>">
-			<input type="hidden" name="response_type" value="code">
-			<input type="hidden" name="scope" value="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email">
-			<input type="submit" value="Sign in with Google">
-		</form>
+		<h1><center>Welcome to SteamDigest!</center></h1>
+		<center>Choose a button below to get started</center>
+		<div style="text-align: center;">
+			<form action="/register" method="get">
+				<input type="submit" value="Sign Up">
+			</form>
+			<form action="/login" method="get">
+				<input type="submit" value="Log in">
+			</form>
+		</div>
 	</div>
 </body>
 </html>
