--- a/prototype/views/profile.ejs
+++ b/prototype/views/profile.ejs
@@ -2,10 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>User Profile</title>
+    <title>Profile</title>
   </head>
   <body>
-    <h1>Welcome to your profile!</h1>
-
+    <div style="text-align:center;">
+      <h1>Welcome to your profile!</h1>
+      <p>Enter your Steam ID below to see the latest news about your favorite games:</p>
+      <br>
+      <form action="/steam" method="post">
+        <label for="steam-id">Steam ID:</label>
+        <input type="text" id="steam-id" name="steam_id">
+        <button type="submit">Submit</button>
+      </form>
+    </div>
   </body>
 </html>
