--- a/prototype/views/steam.ejs
+++ b/prototype/views/steam.ejs
@@ -2,6 +2,60 @@
 <html>
   <head>
     <title>User Data</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+      }
+      
+      h1 {
+        margin-top: 50px;
+        text-align: center;
+      }
+      
+      img {
+        display: block;
+        margin: 20px auto;
+        max-width: 300px;
+      }
+      
+      p {
+        margin: 10px 0;
+      }
+      
+      .recent-games {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: 20px;
+      }
+      
+      .game {
+        background-color: #f2f2f2;
+        border-radius: 5px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        margin-bottom: 20px;
+        padding: 20px;
+        width: 45%;
+      }
+      
+      .game h2 {
+        margin-bottom: 10px;
+      }
+      
+      .article {
+        margin-bottom: 10px;
+      }
+      
+      .date {
+        font-size: 14px;
+        font-style: italic;
+        margin: 5px 0;
+      }
+      
+      .description {
+        font-size: 16px;
+      }
+    </style>
   </head>
   <body>
     <h1>User Data</h1>
@@ -9,16 +63,20 @@
     <p>Username: <%= userData.userName %></p>
     <p>Profile URL: <%= userData.userProfileURL %></p>
     <h2>Recent Games</h2>
-    <ul>
+    <div class="recent-games">
       <% Object.entries(userData.userRecentGames).forEach(([gameName, articleObject]) => { %>
-        <h3><%= gameName %> - </h3>
-        <% articleObject.forEach(article => { %>
-          <h4><%= article.title %> </h4>
-          <li><%= article.date %> </li>
-          <li><%= article.description %> </li>
-          <li><%= article.link %> </li>
-        <% }); %>
+        <div class="game">
+          <h2><%= gameName %></h3>
+          <% articleObject.forEach(article => { %>
+            <div class="article">
+              <h4><%= article.title %></h4>
+              <p class="date"><%= article.date %></p>
+              <p class="description"><%= article.description %></p>
+              <a href="<%= article.link %>">Read more</a>
+            </div>
+          <% }); %>
+        </div>
       <% }); %>
-    </ul>
+    </div>
   </body>
 </html>
